--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,5 @@ spring.datasource.password = dbpassword
 
 spring.flyway.enabled = true
 spring.flyway.locations=classpath:/db/migration,classpath:/db/testdata
+
+logging.level.org.hibernate.SQL=DEBUG
